syntax = "proto3";
package comments;

option java_package = "com.comments.commentsproto";
option java_multiple_files = true;

service CommandService {
    rpc AddComment (AddCommentCommand) returns (Empty);
    rpc RemoveComment (RemoveCommentCommand) returns (Empty);
}

message AddCommentCommand {
    string post_id = 1;
    string content = 2;
}

message RemoveCommentCommand {
    string comment_id = 1;
}

// Todo: Use google.protobuf.Empty instead
message Empty {}

service QueryService {
    rpc GetCommentsOnPost(GetCommentsOnPostRequest) returns (stream Comment);
}

message GetCommentsOnPostRequest {
    string post_id = 1;
}

message Comment {
    string id = 1;
    string post_id = 2;
    string content = 3;
    string timestamp = 4;
}